主要是src中的js和主页面的css修改

--- a/index.html
+++ b/index.html
@@ -51,11 +51,19 @@ biu(&#39;info&#39;, &#39;do not auto hide me&#39;, false)
 </code></pre>
 <button onclick="biu('success', 'done!,true')">Success</button><button onclick="biu('info', 'info not to be auto hidden', true)">Info</button><button onclick="biu('warning','You are restricted to do this!', true)">Warning</button><button onclick="biu('danger', 'You are dead!', true)">Danger</button><h2>Advanced</h2><pre><code class="lang-javascript">// global settings
 window.biuOpts = {
-  height: &#39;50px&#39;,
+  height:;50px;,
   lineHeight: &#39;50px&#39;,
   top: &#39;-55px&#39;,
   closeButton: &#39;x&#39;,
   delay: 5000
+  
+    width:&#39;200px&#39;,
+    height: &#39;24px&#39;,
+    lineHeight: &#39;24px&#39;,
+    right: &#39;-220px&#39;,
+    top:&#39;50px&#39;,
+    closeButton: &#39;x&#39;',
+    delay: 2500
 }
 // use object as argument
 biu({
